[package]
name = "norgopolis-breeze"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neorg-breeze = { git = "https://github.com/nvim-neorg/neorg-breeze", version = "1.0.0" }
neorg-dirman = "0.1.1"
norgopolis-module = "2.0.1"
serde = { version = "1.0.164", features = ["derive"] }
tokio = "1.28.2"
tokio-stream = "0.1.14"
tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter" }
tree-sitter-norg = { git = "https://github.com/nvim-neorg/tree-sitter-norg2" }
